Fixed small layout issues with Claim view

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -149,6 +149,10 @@ div {
     clear: both;
 }
 
+.overflowY {
+    overflow-y: auto;
+}
+
 /**** Form elements ****/
 
 .fileDropBox {
